--- a/niceplans/src/index.css
+++ b/niceplans/src/index.css
@@ -1,3 +1,8 @@
+/* variables */
+:root{ 
+  --navbar: #4D4D4D;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +11,27 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+nav {
+  background-color: var(--navbar);
+}
+
+.btn-user {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 0;
+  padding-top: 50%;
+  margin-top: 5px;
+  border-radius: 50%;
+  background-color: #E699FF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.links-navbar {
+  float: right;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
