--- a/niceplans/src/index.css
+++ b/niceplans/src/index.css
@@ -3,6 +3,15 @@
   --navbar: #4D4D4D;
 }
 
+/* fonts */
+
+
+/* based styles */
+.grid{
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,6 +24,11 @@ body {
 nav {
   background-color: var(--navbar);
 }
+
+.content{
+    width: 70%;
+    margin: 30px auto 30px;
+  }
 
 .btn-user {
   width: 50px;
@@ -31,6 +45,20 @@ nav {
 .links-navbar {
   float: right;
 }
+
+.plan-cards {
+  background-color: #8878C2;
+  color: #ffffff;
+}
+
+.dashboard .plan-list{
+  grid-column: 1/6;
+}
+
+.dashboard .notifications{
+  grid-column: 8/12;
+}
+
 
 
 code {
