--- a/niceplans/src/index.css
+++ b/niceplans/src/index.css
@@ -25,6 +25,11 @@ nav {
   background-color: var(--navbar);
 }
 
+.title-page {
+  text-align: center;
+  margin: 40px 0px 40px;
+}
+
 .content{
     width: 70%;
     margin: 30px auto 30px;
@@ -38,6 +43,18 @@ nav {
   padding-top: 50%;
   margin-top: 5px;
   border-radius: 50%;
+  background-color: #E699FF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.sign-btn {
+  grid-column: 12/12;
+  width: 80px;
+  height: 50px;
+  text-align: center;
+  position: relative;
+  border: none;
+  color: #ffffff;
   background-color: #E699FF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
