--- a/niceplans/src/index.css
+++ b/niceplans/src/index.css
@@ -12,7 +12,12 @@
   grid-template-columns: repeat(12, 1fr);
 }
 
+html {
+  min-height: 100%;
+}
+
 body {
+  min-height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -23,6 +28,19 @@ body {
 
 nav {
   background-color: var(--navbar);
+}
+
+form {
+  padding: 20px;
+  margin-top: 60px;
+}
+
+form button, form h5 {
+  margin: 20px 0;
+}
+
+button {
+  cursor: pointer;
 }
 
 .title-page {
@@ -55,6 +73,7 @@ nav {
   text-align: center;
   position: relative;
   border: none;
+  border-radius: 10%;
   color: #ffffff;
   background-color: #E699FF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -77,6 +96,15 @@ nav {
   grid-column: 8/12;
 }
 
+
+/* set in up the color of focus input elements */
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-color: #8878C2;
+  box-shadow: none;
+}
 
 
 code {
