--- a/niceplans/src/index.css
+++ b/niceplans/src/index.css
@@ -62,6 +62,7 @@ button {
   padding-top: 50%;
   margin-top: 5px;
   border-radius: 50%;
+  text-transform: uppercase;
   background-color: #E699FF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
