--- a/niceplans/src/index.css
+++ b/niceplans/src/index.css
@@ -1,6 +1,8 @@
 /* variables */
 :root{ 
   --navbar: #4D4D4D;
+  --buttons: #E699FF;
+  --plans: #8878C2;
 }
 
 /* fonts */
@@ -63,7 +65,7 @@ button {
   margin-top: 5px;
   border-radius: 50%;
   text-transform: uppercase;
-  background-color: #E699FF;
+  background-color: var(--buttons);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -85,7 +87,7 @@ button {
 }
 
 .plan-cards {
-  background-color: #8878C2;
+  background-color: var(--plans);
   color: #ffffff;
 }
 
@@ -94,7 +96,29 @@ button {
 }
 
 .dashboard .notifications{
+  background: #A199FF;
+  color: white;
   grid-column: 8/12;
+  margin-top: 20px;
+  padding: 5px;
+}
+
+.notifications .title{
+  font-size: 20px;
+  text-align: center;
+}
+
+.notifications .notifications-list {
+  padding-left: 5px;
+  margin-top: 40px;
+}
+
+.notifications li {
+  margin-bottom: 15px;
+}
+
+.notifications .user-name {
+  color: #3D3D3D;
 }
 
 
@@ -103,7 +127,7 @@ input[type=text]:not(.browser-default):focus:not([readonly]),
 input[type=email]:not(.browser-default):focus:not([readonly]),
 input[type=password]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-color: #8878C2;
+  border-color: var(--plans);
   box-shadow: none;
 }
 
